<resources>
    <string name="app_name">Viv2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_management">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_pet">Pets</string>
    <string name="title_env">Environment</string>
    <string name="title_envs">Environments</string>

    <!-- Action labels -->
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete">Delete</string>
    <string name="action_chart">Show History</string>
    <string name="action_set_profile_photo">Profile Image</string>

    <!-- Misc labels/titles/etc. -->
    <string name="nyi_short">NYI</string>
    <string name="nyi_long">Not Yet Implemented</string>
    <string name="occupant_name_label">Occupant</string>
    <string name="model_label">Model</string>
    <string name="controller_version_label">Version</string>
    <string name="system_type_label">System</string>
    <string name="na_entry">N/a</string>
    <string name="pet_label">Pet</string>
    <string name="env_label_short">Env</string>
    <string name="species_entry_label">Species</string>
    <string name="name_entry_hint">Name</string>
    <string name="morph_entry_hint">Morph</string>
    <string name="dialog_title_pet_entry">Create New Pet</string>
    <string name="dialog_migrate_pet_title">Migrate</string>
    <string name="dialog_migrate_pet_message">Assign a pet to an environment</string>

    <!-- generic button labels. -->
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>

    <!-- Filler values -->
    <string name="lorem_ipsum_1para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper auctor ipsum sit amet congue. Suspendisse vehicula iaculis ante, vel accumsan sem ullamcorper dignissim. Morbi sollicitudin aliquet purus, eu porttitor mauris mattis eu. Sed egestas, velit eleifend lobortis tempus, metus purus dapibus nisl, vulputate fermentum odio libero id leo. Mauris pretium tincidunt mi, vitae tempor felis molestie nec. Donec vehicula, nunc pellentesque commodo dapibus, lacus neque aliquet arcu, nec facilisis sem mi mattis dui. Quisque ultricies venenatis commodo. Vivamus id maximus mi, feugiat pellentesque mauris.</string>
    <string name="lorem_ipsum_2sentences">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper auctor ipsum sit amet congue.</string>

    <!-- Time unit format strings -->
    <!-- 1: integral value, 2: time unit string (minute, hour, etc,) 3: plurality. -->
    <string name="time_base_format">%1$d %2$s%3$s ago</string>
    <string name="time_lt_minute">Less than 1 Minute ago</string>
    <string name="time_unit_year">year</string>
    <string name="time_unit_month">month</string>
    <string name="time_unit_week">week</string>
    <string name="time_unit_day">day</string>
    <string name="time_unit_hour">hour</string>
    <string name="time_unit_minute">minute</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Time range labels for chart fragment radio buttons -->
    <!-- TODO: convert to format string & use with unit-strings. -->
    <string name="time_range_month">30D</string>
    <string name="time_range_week">7D</string>
    <string name="time_range_day">24H</string>
    <string name="time_range_12_hour">12H</string>
    <string name="time_range_1_hour">1H</string>
    <string name="time_range_30_min">30m</string>
    <string name="time_range_15_min">15m</string>

    <!-- New labels for sensor locations -->
    <string name="sensor_label_hsie_short">HSIE</string>
    <string name="sensor_label_hsie_long">Hot Side Inside Enclosure</string>
    <string name="sensor_label_csie_short">CSIE</string>
    <string name="sensor_label_csie_long">Cold Side Inside Enclosure</string>
    <string name="sensor_label_hsue_short">HSUE</string>
    <string name="sensor_label_hsue_long">Hot Side Under Enclosure</string>
    <string name="sensor_label_csue_short">CSUE</string>
    <string name="sensor_label_csue_long">Cold Side Under Enclosure</string>
    <string name="sensor_label_mie_short">MIE</string>
    <string name="sensor_label_mie_long">Mid Inside Enclosure</string>

    <string name="y_axis_temp_title">°C</string>
    <string name="x_axis_title_format">Age (%1$s)</string>
    <string name="x_axis_unit_minutes">m</string>
    <string name="x_axis_unit_hours">h</string>
    <string name="x_axis_unit_days">d</string>

</resources>