<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_entry_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/morph_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/morph_entry_hint"
        app:layout_constraintTop_toBottomOf="@+id/name_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/species_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species_entry_label"
        app:layout_constraintTop_toBottomOf="@id/morph_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/species_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/morph_entry"
        app:layout_constraintStart_toEndOf="@id/species_label"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>