<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/main_card_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/col_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="name_label,model_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/r1_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="model_label,model" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/r2_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="name_label" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/card_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_menu_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/guid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/main_card_title_font_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card_menu_button"
            tools:text="00000000-0000-0000-0000-000000000000" />

        <TextView
            android:id="@+id/model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guid" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupant_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/model_label" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/r2_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card_menu_button"
            tools:text="@string/lorem_ipsum_2sentences"/>

        <TextView
            android:id="@+id/model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/col_barrier"
            app:layout_constraintEnd_toStartOf="@id/card_menu_button"
            app:layout_constraintTop_toBottomOf="@id/guid"
            tools:text="Programmatically filled" />

        <TextView
            android:id="@+id/occupant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/r1_barrier"
            app:layout_constraintStart_toEndOf="@id/col_barrier"
            app:layout_constraintEnd_toStartOf="@id/card_menu_button"
            tools:text="Programmatically filled" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>