<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_margin="@dimen/main_card_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="com.google.android.material.card.MaterialCardView" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Barrier
            android:id="@id/col_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="system_label,version_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@id/r1_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="system_label,system" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@id/r2_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="version_label,version" />

        <TextView
            android:id="@+id/guid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_card_title_font_size"
            android:padding="@dimen/card_inner_element_pad"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/system_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_type_label"
            app:layout_constraintTop_toBottomOf="@id/guid"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controller_version_label"
            app:layout_constraintTop_toBottomOf="@id/r1_barrier"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/guid"
            app:layout_constraintStart_toEndOf="@id/col_barrier"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/r1_barrier"
            app:layout_constraintStart_toEndOf="@id/col_barrier"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/env_container_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_envs"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/r2_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/env_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/env_container_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/card_env_overview"
            tools:layout_height="200dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>